--- a/index.html
+++ b/index.html
@@ -104,11 +104,14 @@
 
   <!-- Navigation -->
   <nav>
+    <a data-ved="0CBQQjRxqFwoTCOCZi-bW_o4DFQAAAAAdAAAAABAZ" rel="noopener" target="_blank" href="https://www.google.com/url?sa=i&amp;url=https%3A%2F%2Fmedium.com%2Fdesign-bootcamp%2Fwhy-do-you-need-a-portfolio-956a51e2c31d&amp;psig=AOvVaw1ABIGcWcGHnVBgEFOT4wbt&amp;ust=1754892155207000&amp;source=images&amp;cd=vfe&amp;opi=89978449&amp;ved=0CBQQjRxqFwoTCOCZi-bW_o4DFQAAAAAdAAAAABAZ" jsaction="focus:trigger.HTIQtd; mousedown:trigger.HTIQtd; touchstart:trigger.HTIQtd;" class="YsLeY" role="link" tabindex="0" aria-label="Visit Medium" rlhc="1"><img src="https://miro.medium.com/v2/resize:fit:1400/0*s7-847-cMWNrfnyH.gif" jsaction="" class="sFlh5c FyHeAf iPVvYb" style="max-width: 1000px; height: 105px; margin: 1.5px 0px; width: 303px;" alt="Why do you need a Portfolio?. As a creator, you might be making some… | by  Krishna AR | Bootcamp | Medium" jsname="kn3ccd"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSFR8bA9lLWTxQpMsfxqPz13ERjqnjCsmJVPA&amp;s" class="sFlh5c FyHeAf" alt="Why do you need a Portfolio?. As a creator, you might be making some… | by  Krishna AR | Bootcamp | Medium" jsname="JuXqh" style="max-width: 1000px; width: 414px; height: 144px; margin: 0px; position: absolute; visibility: hidden;" data-ilt="1754775559187"><span class="UWuvyf"></span></a>
     <a href="#about">About</a>
     <a href="#projects">Projects</a>
     <a href="#skills">Skills</a>
     <a href="#resume">Resume</a>
     <a href="#contact">Contact</a>
+    <a data-ved="0CBQQjRxqFwoTCOCZi-bW_o4DFQAAAAAdAAAAABAE" rel="noopener" target="_blank" href="https://www.google.com/url?sa=i&amp;url=https%3A%2F%2Fdribbble.com%2Fshots%2F13912339-Portfolio-gif&amp;psig=AOvVaw1ABIGcWcGHnVBgEFOT4wbt&amp;ust=1754892155207000&amp;source=images&amp;cd=vfe&amp;opi=89978449&amp;ved=0CBQQjRxqFwoTCOCZi-bW_o4DFQAAAAAdAAAAABAE" jsaction="focus:trigger.HTIQtd; mousedown:trigger.HTIQtd; touchstart:trigger.HTIQtd;" class="YsLeY" role="link" tabindex="0" aria-label="Visit Dribbble" rlhc="1"><img src="https://cdn.dribbble.com/userupload/28117148/file/original-c0db2041822a946b9529b5ae1fdf08e8.gif" jsaction="" class="sFlh5c FyHeAf iPVvYb" style="max-width: 1600px; height: 138px; margin: 0px; width: 184px;" alt="Portfolio gif by Muhammad Mateen on Dribbble" jsname="kn3ccd"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQTExJFeYSzTJftEUjcAUj2dhMi_0AFEWs1GA&amp;s" class="sFlh5c FyHeAf" alt="Portfolio gif by Muhammad Mateen on Dribbble" jsname="JuXqh" style="max-width: 1600px; position: absolute; visibility: hidden;" data-ilt="1754775138811"><span class="UWuvyf"></span></a>
+
   </nav>
 
   <!-- About -->
@@ -125,9 +128,8 @@ With hands-on experience in building projects and applying modern design princip
     <div class="project">
       <h3>Student Result Management System</h3>
       <p>A Student Result Management System Project built using PHP and MYSQL.</p>
-      <a href="https://docs.google.com/document/d/136472kngj9vZ95hogZnTySrdq3BdLhSa/edit?usp=drive_link&ouid=104652805876722828510&rtpof=true&sd=true" class="button">View Project</a>
-    </div>
-
+      <a href="https://drive.google.com/file/d/1d8xuaBU8fjQ2qAGxy4juKhX1I_qgROCX/view?usp=drive_link" class="button">View Project</a>
+      <a href="https://drive.google.com/drive/folders/1z-V28weUAJwCh3BTFEVQiuoKMFF1RA3K?usp=drive_link" class="button">View Output Image</a>
   </section>
 
   <!-- Skills -->
